# SDL2_Lua_OpenGL

./: CMakeLists.txt  README.md
include/app/: Application.h
include/geo/: AffineMap.h  Calculator.h  Geometry.h  Matrix.h  Matrix3.h  Matrix4.h  MatrixDef.h  Point.h  Quaternion.h  Rect.h  Vector2.h  Vector3.h
include/gl/: GLBillBoard.h  GLScreenBoard.h  GLShader.h  GLSprite.h  GLSprite2D.h  GLSprite3D.h  GLTexture.h  GLUCompatible.h  GLVertexArray.h
include/gl/view/: GLImageView.h  GLTextView.h  GLView.h  GLViewGroup.h  GLViewOrigin.h
include/gl/widget/: GLGroupView.h  GLImageView.h  GLScreenView.h  GLSprite.h  GLTextView.h  GLView.h  GLViewGroup.h  GLWidget.h  GLWidgetGroup.h  HorizontalRotateMenu.h  RotateMenu.h  VerticalRotateMenu.h
include/misc/: Misc.h  Uncopyable.h
include/parts/: Component.h  Parts.h
include/resource/: ImageId.h  MenuInfo.h  Resources.h  StringId.h
include/resources/: ImageId.h  StringId.h
include/scene/: Controller.h  DataStore.h  Presenter.h  Repository.h  Scene.h  UseCase.h
include/scene/chapter05/: Chapter05Scene.h
include/scene/menu/: MenuController.h  MenuDataStore.h  MenuPresenter.h  MenuScene.h  MenuUseCase.h  OptionMenu.h
include/scene/opening/: OpeningController.h  OpeningDataStore.h  OpeningPresenter.h  OpeningRepository.h  OpeningScene.h  OpeningUseCase.h  VerticalRotateMenu.h
include/sdl/: SDLColor.h  SDLImage.h  SDLJoystick.h  SDLRenderer.h  SDLSoundChunk.h  SDLSoundMixer.h  SDLTexture.h  SDLTtfFont.h  SDLWindow.h
include/sdl/widget/: SDLGroupView.h  SDLImageView.h  SDLTextView.h  SDLView.h  SDLWindowView.h
include/task/: ActionTask.h  Interpolator.h  LoopTask.h  ParallelTask.h  SerialTask.h  Task.h  TaskManager.h  TaskPool.h
include/trash/: GLBillBoard.cpp  GLUCompatible.h  MathQuaternion.h  Quaternion.h
include/trash/math/: Math.h
res/lua/: system.lua
res/lua/data/: top_menu.lua
res/lua/image/: image.lua
res/lua/lang/: english.lua  japanese.lua
res/shaders/: Sprite.vert
src/: main.cpp
src/app/: Application.cpp  CMakeLists.txt
src/geo/: AffineMap.cpp  CMakeLists.txt
src/gl/: CMakeLists.txt  GLBillBoard.cpp  GLScreenBoard.cpp  GLShader.cpp  GLSprite.cpp  GLSprite2D.cpp  GLSprite3D.cpp  GLTexture.cpp  GLVertexArray.cpp
src/gl/view/: CMakeLists.txt  GLImageView.cpp  GLTextView.cpp  GLView.cpp  GLViewGroup.cpp  GLViewOrigin.cpp
src/gl/widget/: CMakeLists.txt  GLGroupView.cpp  GLImageView.cpp  GLScreenView.cpp  GLSprite.cpp  GLTextView.cpp  GLView.cpp  GLViewGroup.cpp  GLViewOrigin.cpp  GLWidget.cpp  GLWidgetGroup.cpp  HorizontalRotateMenu.cpp  VerticalRotateMenu.cpp
src/parts/: Parts.cpp
src/resource/: CMakeLists.txt  MenuInfo.cpp  Resources.cpp
src/resources/: CMakeLists.txt  MenuInfo.cpp  Resources.cpp
src/scene/: CMakeLists.txt  Controller.cpp  DataStore.cpp  Presenter.cpp  Repository.cpp  Scene.cpp  UseCase.cpp
src/scene/Chapter06/: CMakeLists.txt
src/scene/chapter05/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  Chapter05Scene.cpp  CircleComponent.cpp  CircleComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Laser.cpp  Laser.h  Math.cpp  Math.h  MoveComponent.cpp  MoveComponent.h  Random.cpp  Random.h  Shader.cpp  Shader.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  VertexArray.cpp  VertexArray.h
src/scene/chapter05.bak/: Actor.h  Asteroid.h  Chapter05Scene.cpp  CircleComponent.cpp  CircleComponent.h  InputComponent.h  Math.cpp  Math.h  MoveComponent.cpp  Random.cpp  Random.h  Ship.h  SpriteComponent.cpp  VertexArray.cpp  VertexArray.h
src/scene/menu/: CMakeLists.txt  MenuController.cpp  MenuDataStore.cpp  MenuPresenter.cpp  MenuScene.cpp  MenuUseCase.cpp  OptionMenu.cpp
src/scene/opening/: CMakeLists.txt  OpeningController.cpp  OpeningDataStore.cpp  OpeningPresenter.cpp  OpeningRepository.cpp  OpeningScene.cpp  OpeningUseCase.cpp  (+1 more)
src/sdl/: CMakeLists.txt  SDLColor.cpp  SDLImage.cpp  SDLJoystick.cpp  SDLRenderer.cpp  SDLSoundChunk.cpp  SDLSoundMixer.cpp  SDLTexture.cpp  SDLTtfFont.cpp  SDLWindow.cpp
src/task/: ActionTask.cpp  CMakeLists.txt  Interpolator.cpp  LoopTask.cpp  ParallelTask.cpp  SerialTask.cpp  Task.cpp  TaskManager.cpp
src/trash/: GLUCompatible.cpp
(+37 files in other folders)
